--- a/mack.html
+++ b/mack.html
@@ -34,7 +34,7 @@
                 <nav class="uk-navbar-container uk-navbar-default uk-box-shadow-small" uk-dropnav="align:center">
                     <div class="uk-container uk-container-large" uk-navbar>
                         <div class="uk-navbar-item uk-navbar-left uk-logo uk-link-reset">
-                            <a href="/pd/">Brian French</a>
+                            <a href="/gd/">Brian French</a>
                         </div>
 
                         <div class="uk-navbar-item uk-navbar-right">
