--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                 <div class="uk-container uk-container-large uk-margin-large">
                     <div class="uk-grid uk-flex uk-flex-top" uk-grid>
-                        <div class="uk-width-4-5">
+                        <div class="uk-width-4-5@s">
                             <h1>
                                 <p class="fs-20 uk-text-uppercase">Hi, I&rsquo;m Brian</p>
                                 <p class="fs-44">I&rsquo;m a design generalist focused on craft, growth and strategy</p>
