--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             </div>
                             <div class="uk-width-1-2@s">
                                 <a href="mack.html">
-                                    <div class="uk-overflow-hidden uk-border-rounded-large uk-margin pulse " uk-scrollspy-class="uk-animation-slide-right-small">
+                                    <div class="uk-overflow-hidden uk-border-rounded-large uk-margin pulse " uk-scrollspy-class="uk-animation-scale-up">
                                         <img src="img/mack/login-2025.webp" />
                                     </div>
                                 </a>
