--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             <div class="uk-width-1-3@s">
                                 <blockquote class="uk-card uk-card-default uk-card-body uk-border-rounded-large fs-16">
                                     <div>
-                                        <p>&ldquo;Brian is a brilliant designer also skilled with trouble shooting production issues quickly and efficiently. His professional manner is greatly appreciated in the work place and he is always considered the &ldquo;Go To&rdquo; man.&rdquo;</p>
+                                        <p>&ldquo;Brian is a brilliant designer also skilled with trouble shooting production issues quickly and efficiently. His professional manner is greatly appreciated in the work place and he is always considered the &lsquo;Go To&rsquo; man.&rdquo;</p>
                                     </div>
                                 </blockquote>
                             </div>
