--- a/mack.html
+++ b/mack.html
@@ -234,7 +234,7 @@
             <div class="uk-container">
                 <div class="uk-grid">
                     <div class="uk-width-expand">
-                        <p class="uk-text-default">&copy; 2025 Brian French</p>
+                        <p class="fs-12">&copy; Brian French 2025. All rights reserved. </p>
                     </div>
                     <div class="uk-width-auto">
                         <a href="#" uk-totop uk-scroll class="fs-12"></a>
