--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                                     <a href="mack.html" class="uk-button pulse warm uk-border-pill">See more</a>
                                 </div>
                             </div>
-                            <div class="uk-width-1-2@s">
+                            <div class="uk-width-1-2@s uk-flex uk-flex-middle">
                                 <a href="mack.html">
-                                    <div class="uk-overflow-hidden uk-border-rounded-large uk-margin pulse " uk-scrollspy-class="uk-animation-scale-up">
+                                    <div class="uk-overflow-hidden uk-border-rounded-large" uk-scrollspy-class="uk-animation-scale-up">
                                         <img src="img/mack/login-2025.webp" />
                                     </div>
                                 </a>
@@ -126,7 +126,7 @@
                     <div class="uk-flex uk-grid">
                         <div class="uk-grid" uk-grid="masonry: pack">
                             <div class="uk-width-1-3@s">
-                                <blockquote class="uk-card uk-card-default uk-card-body uk-border-rounded-large fs-16">
+                                <blockquote class="uk-background-default uk-card-hover uk-card-body uk-border-rounded-large fs-16">
                                     <div>
                                         <p>&ldquo;Brian is truly an outstanding employee in every way including his great attitude, dedication, willingness to do whatever is required to get the job done, his intelligence and his expertise.&rdquo;</p>
                                     </div>
@@ -134,7 +134,7 @@
                             </div>
 
                             <div class="uk-width-1-3@s">
-                                <blockquote class="uk-card uk-card-default uk-card-body uk-border-rounded-large fs-16">
+                                <blockquote class="uk-background-default uk-card-hover uk-card-body uk-border-rounded-large fs-16">
                                     <div>
                                         <p>&ldquo;He is an outstanding Creative Director and is skilled at all aspects of content development and implementation to include strategy development, graphic design, copywriting, production, campaign management, reporting and project management.&rdquo;</p>
                                     </div>
@@ -142,7 +142,7 @@
                             </div>
 
                             <div class="uk-width-1-3@s">
-                                <blockquote class="uk-card uk-card-default uk-card-body uk-border-rounded-large fs-16">
+                                <blockquote class="uk-background-default uk-card-hover uk-card-body uk-border-rounded-large fs-16">
                                     <div>
                                         <p>&ldquo;He is the equivalent of a team of skilled professionals that can conceptualize, design, develop, implement, QC and execute complex campaigns across all channels, including Facebook, Instagram, SMS text, search, display, mobile, email, website and direct mail.&rdquo;
                                     </div>
@@ -151,7 +151,7 @@
 
 
                             <div class="uk-width-1-3@s">
-                                <blockquote class="uk-card uk-card-default uk-card-body uk-border-rounded-large fs-16">
+                                <blockquote class="uk-background-default uk-card-hover uk-card-body uk-border-rounded-large fs-16">
                                     <div>
                                         <p>&ldquo;Brian is a brilliant designer also skilled with trouble shooting production issues quickly and efficiently. His professional manner is greatly appreciated in the work place and he is always considered the &lsquo;Go To&rsquo; man.&rdquo;</p>
                                     </div>
@@ -159,7 +159,7 @@
                             </div>
 
                             <div class="uk-width-1-3@s">
-                                <blockquote class="uk-card uk-card-default uk-card-body uk-border-rounded-large fs-16">
+                                <blockquote class="uk-background-default uk-card-hover uk-card-body uk-border-rounded-large fs-16">
                                     <div>
                                         <p>&ldquo;Brian&rsquo;s skill at working productively in a high stress, deadline pending situation is unmatched. He is a true ASSET.&rdquo;
                                         </p>
@@ -176,7 +176,7 @@
             <div class="uk-container uk-container-large">
                 <div class="uk-grid">
                     <div class="uk-width-expand">
-                        <p class="fs-12">&copy; 2025 Brian French</p>
+                        <p class="fs-12">&copy; Brian French 2025. All rights reserved. </p>
                     </div>
                     <div class="uk-width-auto">
                         <a href="#" uk-totop uk-scroll class="fs-12"></a>
