--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <link rel="stylesheet" href="css/custom.css" />
         <script src="js/uikit.min.js"></script>
         <script src="js/uikit-icons.min.js"></script>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Inconsolata:wght@200..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Inconsolata:wght@200..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <!-- Google Tag Manager -->
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
                                                               new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -33,7 +33,7 @@
             <div class="uk-inline uk-background-muted uk-width-1-1 " >
                 <div uk-sticky="show-on-up: true">
                     <nav class="uk-navbar-container uk-navbar-default no-border uk-box-shadow-small" uk-dropnav="align:center">
-                        <div class="uk-container uk-container-large" uk-navbar>
+                        <div class="uk-container uk-container-xlarge" uk-navbar>
                             <div class="uk-navbar-item uk-navbar-left uk-logo uk-link-reset">
                                 <a href="/gd/">Brian French</a>
                             </div>
@@ -60,10 +60,10 @@
 
                 <div class="uk-container uk-container-large uk-margin-large">
                     <div class="uk-grid uk-flex uk-flex-top" uk-grid>
-                        <div class="uk-width-4-5@s">
+                        <div class="">
                             <h1>
                                 <p class="fs-20 uk-text-uppercase">Hi, I&rsquo;m Brian</p>
-                                <p class="fs-44">I&rsquo;m a design generalist focused on craft, growth and strategy</p>
+                                <p class="fs-40 fw-600">I&rsquo;m a design generalist focused on craft, growth and strategy</p>
                                 <p class="fs-20">I apply hands-on skill and strategic thinking to solve complex challenges and deliver measurable results.</p>
                             </h1>
                         </div>
@@ -81,10 +81,15 @@
 
         <main>
             <!-- Main Content -->
-            <div class="uk-section uk-light uk-background-muted" uk-height-viewport="expand:true">
+            <div class="uk-section uk-background-muted" uk-height-viewport="expand:true">
 
                 <div class="uk-container uk-container-large">
-                    <div class="uk-background-primary uk-border-rounded-large uk-padding-large">
+
+                    <div class="uk-text-center">
+                        <h2 class="fs-26">What I'm working on</h2>
+                    </div>
+
+                    <div class="uk-background-primary uk-border-rounded-large uk-padding-large uk-light ">
                         <div id="mack-survey" uk-grid uk-scrollspy="target:div;delay:75;repeat: true;">
 
                             <div class="uk-width-expand uk-flex-first@s uk-flex uk-flex-middle">
@@ -117,15 +122,37 @@
                 </div>
             </div>
 
+            <div class="uk-section uk-background-muted" uk-height-viewport="expand:true">
+
+                <div class="uk-container uk-container-large">
+
+                    <div class="uk-text-center">
+                        <h2 class="fs-26">What I've done</h2>
+                    </div>
+
+                    <div class="uk-background-secondary uk-border-rounded-large uk-padding-large uk-light ">
+                        <div class="uk-child-width-1-5 uk-grid-small" uk-grid>
+                            <div><img src="img/5wi.png" /></div>
+                            <div><img src="img/aac.png" /></div>
+                            <div><img src="img/BSA-SJAC.png" /></div>
+                            <div><img src="img/mack.png" /></div>
+                            <div><img src="img/rategenius.png" /></div>
+                        
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
             <div class="uk-section uk-section-muted">
                 <div class="uk-container uk-container-large">
-                    <div class="uk-margin-large uk-text-center">
-                        <h2 id="recommendations">Endorsements from past coworkers</h2>
+                    <div class="uk-text-center">
+                        <h2 class="fs-26">What past coworkers say</h2>
                     </div>
 
                     <div class="uk-flex uk-grid">
-                        <div class="uk-grid" uk-grid="masonry: pack">
-                            <div class="uk-width-1-3@s">
+                        <div class="uk-grid uk-child-width-1-3@s" uk-grid="masonry: pack">
+                            <div>
                                 <blockquote class="uk-background-default uk-card-hover uk-card-body uk-border-rounded-large fs-16">
                                     <div>
                                         <p>&ldquo;Brian is truly an outstanding employee in every way including his great attitude, dedication, willingness to do whatever is required to get the job done, his intelligence and his expertise.&rdquo;</p>
@@ -133,7 +160,7 @@
                                 </blockquote>
                             </div>
 
-                            <div class="uk-width-1-3@s">
+                            <div>
                                 <blockquote class="uk-background-default uk-card-hover uk-card-body uk-border-rounded-large fs-16">
                                     <div>
                                         <p>&ldquo;He is an outstanding Creative Director and is skilled at all aspects of content development and implementation to include strategy development, graphic design, copywriting, production, campaign management, reporting and project management.&rdquo;</p>
@@ -141,7 +168,7 @@
                                 </blockquote>
                             </div>
 
-                            <div class="uk-width-1-3@s">
+                            <div>
                                 <blockquote class="uk-background-default uk-card-hover uk-card-body uk-border-rounded-large fs-16">
                                     <div>
                                         <p>&ldquo;He is the equivalent of a team of skilled professionals that can conceptualize, design, develop, implement, QC and execute complex campaigns across all channels, including Facebook, Instagram, SMS text, search, display, mobile, email, website and direct mail.&rdquo;
@@ -150,7 +177,7 @@
                             </div>
 
 
-                            <div class="uk-width-1-3@s">
+                            <div>
                                 <blockquote class="uk-background-default uk-card-hover uk-card-body uk-border-rounded-large fs-16">
                                     <div>
                                         <p>&ldquo;Brian is a brilliant designer also skilled with trouble shooting production issues quickly and efficiently. His professional manner is greatly appreciated in the work place and he is always considered the &lsquo;Go To&rsquo; man.&rdquo;</p>
@@ -158,7 +185,7 @@
                                 </blockquote>
                             </div>
 
-                            <div class="uk-width-1-3@s">
+                            <div>
                                 <blockquote class="uk-background-default uk-card-hover uk-card-body uk-border-rounded-large fs-16">
                                     <div>
                                         <p>&ldquo;Brian&rsquo;s skill at working productively in a high stress, deadline pending situation is unmatched. He is a true ASSET.&rdquo;
@@ -173,7 +200,7 @@
         </main>
 
         <footer class="uk-background-muted uk-section-small ">
-            <div class="uk-container uk-container-large">
+            <div class="uk-container uk-container-xlarge">
                 <div class="uk-grid">
                     <div class="uk-width-expand">
                         <p class="fs-12">&copy; Brian French 2025. All rights reserved. </p>
