--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <div class="">
                             <h1>
                                 <p class="fs-20 uk-text-uppercase">Hi, I&rsquo;m Brian</p>
-                                <p class="fs-40 fw-600">I&rsquo;m a design generalist focused on craft, growth and strategy</p>
+                                <p class="fs-36 fw-400">I&rsquo;m a design generalist focused on craft, growth and strategy</p>
                                 <p class="fs-20">I apply hands-on skill and strategic thinking to solve complex challenges and deliver measurable results.</p>
                             </h1>
                         </div>
@@ -103,7 +103,7 @@
                                     </div>
 
                                     <div  uk-scrollspy-class="uk-animation-slide-left-small">
-                                        <p>Showcasing a modern-day redesign of a highly successful project I undertook in November 2015 for Mack Trucks (a multi-channel campaign centered around a survey aimed at generating qualified leads).</p>
+                                        <p>Reimagining a highly successful project I undertook for Mack Trucks with design trends, implement best practices, and strengthen brand identity.</p>
                                     </div>
 
                                     <a href="mack.html" class="uk-button pulse warm uk-border-pill">See more</a>
@@ -127,11 +127,11 @@
                 <div class="uk-container uk-container-large">
 
                     <div class="uk-text-center">
-                        <h2 class="fs-26">What I've done</h2>
+                        <h2 class="fs-26">What I've done (Coming soon)</h2>
                     </div>
 
                     <div class="uk-background-secondary uk-border-rounded-large uk-padding-large uk-light ">
-                        <div class="uk-child-width-1-5 uk-grid-small" uk-grid>
+                        <div class="uk-child-width-1-5 uk-grid-small" uk-grid uk-scrollspy="cls: uk-animation-scale-up;target:div;delay:75;repeat: true;">
                             <div><img src="img/5wi.png" /></div>
                             <div><img src="img/aac.png" /></div>
                             <div><img src="img/BSA-SJAC.png" /></div>
@@ -147,7 +147,7 @@
             <div class="uk-section uk-section-muted">
                 <div class="uk-container uk-container-large">
                     <div class="uk-text-center">
-                        <h2 class="fs-26">What past coworkers say</h2>
+                        <h2 class="fs-26">What my coworkers say</h2>
                     </div>
 
                     <div class="uk-flex uk-grid">
