--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                     </div>
 
                                     <div  uk-scrollspy-class="uk-animation-slide-left-small">
-                                        <p>Reimagining a highly successful project I undertook for Mack Trucks with design trends, implement best practices, and strengthen brand identity.</p>
+                                        <p>Reimagining a highly successful project I undertook for Mack Trucks with modern design trends, best practices, and a strengthened brand identity.</p>
                                     </div>
 
                                     <a href="mack.html" class="uk-button pulse warm uk-border-pill">See more</a>
