--- a/index.html
+++ b/index.html
@@ -122,21 +122,21 @@
                 </div>
             </div>
 
-            <div class="uk-section uk-background-muted" uk-height-viewport="expand:true">
+            <div class="uk-section uk-background-secondary uk-light" uk-height-viewport="expand:true">
 
-                <div class="uk-container uk-container-large">
+                <div class="uk-container">
 
                     <div class="uk-text-center">
-                        <h2 class="fs-26">What I've done (Coming soon)</h2>
+                        <h2 class="fs-26">What I've done <span class="uk-alert-primary fs-18 uk-text-italic">(Coming soon)</span></h2>
                     </div>
 
-                    <div class="uk-background-secondary uk-border-rounded-large uk-padding-large uk-light ">
-                        <div class="uk-child-width-1-5 uk-grid-small" uk-grid uk-scrollspy="cls: uk-animation-scale-up;target:div;delay:75;repeat: true;">
-                            <div><img src="img/5wi.png" /></div>
-                            <div><img src="img/aac.png" /></div>
-                            <div><img src="img/BSA-SJAC.png" /></div>
-                            <div><img src="img/mack.png" /></div>
-                            <div><img src="img/rategenius.png" /></div>
+                    <div class="uk-background-secondary uk-border-rounded-large uk-padding">
+                        <div class="uk-child-width-1-5 uk-grid-small" uk-grid>
+                            <div><img src="img/5wi.png" class="uk-blend-luminosity uk-border-rounded-large" /></div>
+                            <div><img src="img/aac.png" class="uk-blend-luminosity uk-border-rounded-large" /></div>
+                            <div><img src="img/BSA-SJAC.png" class="uk-blend-luminosity uk-border-rounded-large" /></div>
+                            <div><img src="img/mack.png" class="uk-blend-luminosity uk-border-rounded-large" /></div>
+                            <div><img src="img/rategenius.png" class="uk-blend-luminosity uk-border-rounded-large" /></div>
                         
                         </div>
                     </div>
