--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <meta name="viewport" content="initial-scale=1" />
         <base href />
-        <title>Brian French • Product Designer</title>
+        <title>Brian French • Senior Marketing Designer</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="css/uikit.css" />
         <link rel="stylesheet" href="css/custom.css" />
@@ -63,7 +63,7 @@
                         <div class="">
                             <h1>
                                 <p class="fs-20 uk-text-uppercase">Hi, I&rsquo;m Brian</p>
-                                <p class="fs-36 fw-400">I&rsquo;m a design generalist focused on craft, growth and strategy</p>
+                                <p class="fs-36 fw-400">I&rsquo;m a senior marketing designer focused on craft, growth and strategy</p>
                                 <p class="fs-20">I apply hands-on skill and strategic thinking to solve complex challenges and deliver measurable results.</p>
                             </h1>
                         </div>
