--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="uk-container uk-container-large">
 
                     <div class="uk-text-center">
-                        <h2 class="fs-26">What I'm working on</h2>
+                        <h2 class="fs-26">Current Projects</h2>
                     </div>
 
                     <div class="uk-background-primary uk-border-rounded-large uk-padding-large uk-light ">
@@ -122,12 +122,12 @@
                 </div>
             </div>
 
-            <div class="uk-section uk-background-secondary uk-light" uk-height-viewport="expand:true">
+            <div class="uk-section uk-background-muted" uk-height-viewport="expand:true">
 
-                <div class="uk-container">
+                <div class="uk-container uk-container-large">
 
                     <div class="uk-text-center">
-                        <h2 class="fs-26">What I've done <span class="uk-alert-primary fs-18 uk-text-italic">(Coming soon)</span></h2>
+                        <h2 class="fs-26">Past Work <span class=" fs-18 uk-text-italic">(Coming soon)</span></h2>
                     </div>
 
                     <div class="uk-background-secondary uk-border-rounded-large uk-padding">
@@ -147,7 +147,7 @@
             <div class="uk-section uk-section-muted">
                 <div class="uk-container uk-container-large">
                     <div class="uk-text-center">
-                        <h2 class="fs-26">What my coworkers say</h2>
+                        <h2 class="fs-26">How coworkers describe me</h2>
                     </div>
 
                     <div class="uk-flex uk-grid">
