--- a/mack.html
+++ b/mack.html
@@ -56,7 +56,7 @@
                                 <ul class="uk-navbar-nav">
                                     <li>
                                         <a class="uk-navbar-toggle uk-navbar-toggle-animate" href uk-navbar-toggle-icon></a>
-                                        <div class="uk-dropbar uk-dropbar-top uk-width-expand uk-padding" uk-drop="stretch: y; animation:slide-left; animate-out:true">
+                                        <div class="uk-dropbar uk-dropbar-top uk-width-expand uk-padding" uk-drop="stretch: y; animation:reveal-top; animate-out:true">
 
                                             <ul class="uk-nav uk-list uk-list-large uk-nav-default fs-16">
                                                 <li class="uk-nav-header fw-500">Current Projects</li>
