--- a/index.html
+++ b/index.html
@@ -160,8 +160,13 @@
                         <h2 class="fs-26">Past Work</h2>
                     </div>
 
-                    <div class="uk-background-default uk-border-rounded-large uk-padding-large  uk-margin uk-margin-large-bottom">
+                    <div class="uk-background-default uk-border-rounded-large uk-padding-large uk-margin">
                         <div id="5w-insights" uk-grid uk-scrollspy="target:div;delay:75;repeat: true;">
+                            <div class="uk-width-1-2@s uk-flex uk-flex-middle">
+                                <div class="uk-overflow-hidden uk-border-rounded-large uk-padding uk-background-default" uk-scrollspy-class="uk-animation-scale-up">
+                                    <img src="img/5winsights/Booth-Mockup_2024.jpg" />
+                                </div>
+                            </div>
                             <div class="uk-width-expand uk-flex-first@s uk-flex uk-flex-middle">
                                 <div>
                                     <div uk-scrollspy-class="uk-animation-slide-left-small">
@@ -180,29 +185,49 @@
                                     <a href="5winsights.html" class="uk-button uk-button-default uk-border-pill uk-disabled uk-background-muted-darker uk-light">Coming soon</a>
                                 </div>
                             </div>
-                            <div class="uk-width-1-2@s uk-flex uk-flex-middle">
-                                <div class="uk-overflow-hidden uk-border-rounded-large uk-padding uk-background-default" uk-scrollspy-class="uk-animation-scale-up">
-                                    <img src="img/5winsights/Booth-Mockup_2024.jpg" />
-                                </div>
-                            </div>
                         </div>
                     </div>
 
-                    <div class="uk-text-center">
-                        <h2 class="fs-26">More work examples coming soon</h2>
-                    </div>
-                    <div class="uk-background-secondary uk-border-rounded-large uk-padding">
-                        <div class="uk-grid-small uk-child-width-1-2 uk-child-width-1-4@s uk-width-auto" uk-grid>
-                            <div><img src="img/aac.png" class="uk-blend-luminosity uk-border-rounded-large" /></div>
-                            <div><img src="img/BSA-SJAC.png" class="uk-blend-luminosity uk-border-rounded-large" /></div>
-                            <div><img src="img/mack.png" class="uk-blend-luminosity uk-border-rounded-large" /></div>
-                            <div><img src="img/rategenius.png" class="uk-blend-luminosity uk-border-rounded-large" /></div>
+
+                    <div class="uk-border-rounded-large ">
+                        <div class="uk-grid-small uk-child-width-1-1 uk-child-width-1-4@s" uk-grid>
+                            <div>
+                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-body uk-text-center">
+                                    <img src="img/aac.png" class="uk-blend-luminosity uk-width-1-2 uk-width-1-1@s" />
+                                    <div><a href="" class="uk-button uk-button-default uk-border-pill uk-disabled uk-background-muted uk-width-1-1">Coming soon</a></div>
+                                </div>
+                            </div>
+
+                            <div>
+                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-body uk-text-center">
+                                    <img src="img/BSA-SJAC.png" class="uk-blend-luminosity uk-width-1-2 uk-width-1-1@s" />
+                                    <div><a href="" class="uk-button uk-button-default uk-border-pill uk-disabled uk-background-muted uk-width-1-1">Coming soon</a></div>
+                                </div>
+                            </div>
+
+                            <div>
+                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-body uk-text-center">
+                                    <img src="img/mack.png" class="uk-blend-luminosity uk-width-1-2 uk-width-1-1@s" />
+                                    <div>
+                                        <a href="" class="uk-button uk-button-default uk-border-pill uk-disabled uk-background-muted uk-width-1-1">Coming soon</a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div>
+                                <div class="uk-background-default uk-border-rounded-large uk-card uk-card-body uk-text-center">
+                                    <img src="img/rategenius.png" class="uk-blend-luminosity uk-width-1-2 uk-width-1-1@s" />
+                                    <div>
+                                        <a href="" class="uk-button uk-button-default uk-border-pill uk-disabled uk-background-muted uk-width-1-1">Coming soon</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="uk-section uk-section-muted">
+            <div class="uk-section uk-section-default">
                 <div class="uk-container uk-container-large">
                     <div class="uk-text-center">
                         <h2 class="fs-26">How coworkers describe me</h2>
