--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
 
 
                     <div class="uk-border-rounded-large ">
-                        <div class="uk-grid-small uk-child-width-1-1 uk-child-width-1-4@s" uk-grid>
+                        <div class="uk-grid-small uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-4@m" uk-grid>
                             <div>
                                 <div class="uk-background-default uk-border-rounded-large uk-card uk-card-body uk-text-center">
-                                    <img src="img/aac.png" class="uk-blend-luminosity uk-width-1-2 uk-width-1-1@s" />
+                                        <img src="img/aac.png" class="uk-blend-luminosity uk-width-1-2 uk-width-1-1@s" />
                                     <div><a href="" class="uk-button uk-button-default uk-border-pill uk-disabled uk-background-muted uk-width-1-1">Coming soon</a></div>
                                 </div>
                             </div>
