--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     <div class="uk-flex uk-grid">
                         <div class="uk-grid uk-child-width-1-3@s" uk-grid="masonry: pack">
                             <div>
-                                <blockquote class="uk-background-default uk-card-hover uk-card-body uk-border-rounded-large fs-16">
+                                <blockquote class="uk-background-default uk-card-body uk-border-rounded-large fs-16">
                                     <div>
                                         <p>&ldquo;Brian is truly an outstanding employee in every way including his great attitude, dedication, willingness to do whatever is required to get the job done, his intelligence and his expertise.&rdquo;
                                         </p>
@@ -245,7 +245,7 @@
                             </div>
 
                             <div>
-                                <blockquote class="uk-background-default uk-card-hover uk-card-body uk-border-rounded-large fs-16">
+                                <blockquote class="uk-background-default uk-card-body uk-border-rounded-large fs-16">
                                     <div>
                                         <p>&ldquo;He is an outstanding Creative Director and is skilled at all aspects of content development and implementation to include strategy development, graphic design, copywriting, production, campaign management, reporting and project management.&rdquo;</p>
                                     </div>
@@ -253,7 +253,7 @@
                             </div>
 
                             <div>
-                                <blockquote class="uk-background-default uk-card-hover uk-card-body uk-border-rounded-large fs-16">
+                                <blockquote class="uk-background-default uk-card-body uk-border-rounded-large fs-16">
                                     <div>
                                         <p>&ldquo;He is the equivalent of a team of skilled professionals that can conceptualize, design, develop, implement, QC and execute complex campaigns across all channels, including Facebook, Instagram, SMS text, search, display, mobile, email, website and direct mail.&rdquo;</p>
                                     </div>
@@ -261,7 +261,7 @@
                             </div>
 
                             <div>
-                                <blockquote class="uk-background-default uk-card-hover uk-card-body uk-border-rounded-large fs-16">
+                                <blockquote class="uk-background-default uk-card-body uk-border-rounded-large fs-16">
                                     <div>
                                         <p>&ldquo;Brian is a brilliant designer also skilled with trouble shooting production issues quickly and efficiently. His professional manner is greatly appreciated in the work place and he is always considered the
                                             &lsquo;Go To&rsquo; man.&rdquo;</p>
@@ -270,7 +270,7 @@
                             </div>
 
                             <div>
-                                <blockquote class="uk-background-default uk-card-hover uk-card-body uk-border-rounded-large fs-16">
+                                <blockquote class="uk-background-default uk-card-body uk-border-rounded-large fs-16">
                                     <div>
                                         <p>&ldquo;Brian&rsquo;s skill at working productively in a high stress, deadline pending situation is unmatched. He is a true ASSET.&rdquo;</p>
                                     </div>
