--- a/mack.html
+++ b/mack.html
@@ -34,7 +34,10 @@
                     <nav class="uk-navbar-container uk-navbar-default no-border uk-box-shadow-small" uk-dropnav="align:center">
                         <div class="uk-container uk-container-xlarge" uk-navbar>
                             <div class="uk-navbar-item uk-navbar-left uk-logo uk-link-reset">
-                                <a href="/gd/">Brian French</a>
+                                <a href="/gd/" class="fw-500 warm">
+                                    <img src="img/headshot.jpg" alt="" class="uk-border-circle uk-box-shadow-medium uk-float-left uk-margin-small-right" style="max-height:38px;border:3px solid #fff" /> 
+                                    <span class="margin-small-right uk-width-auto">Brian French</span>&ensp;
+                                </a>
                             </div>
 
                             <div class="uk-navbar-item uk-navbar-center uk-visible@s">
@@ -99,29 +102,29 @@
             </div>
 
             <div class="uk-background-secondary">
-                <div class="uk-container uk-container-xlarge uk-padding-remove uk-overflow-hidden uk-height-max-large" >
-                    <div class="uk-background-bottom-left uk-background-cover uk-panel uk-flex uk-flex-bottom uk-flex-center " style="background-image: url(img/mack/mack-driver-survey.webp);" uk-height-viewport="offset-top: true; offset-bottom: 53;min:300">
+                <div class="uk-container uk-container-expand uk-padding-remove uk-overflow-hidden" >
+                    <div class="uk-background-bottom-left uk-background-cover uk-panel uk-flex uk-flex-bottom uk-flex-center " style="background-image: url(img/mack/mack-driver-survey.webp);" uk-height-viewport="offset-top: true; offset-bottom: 40;min:400">
                     </div>
                 </div>
             </div>
 
-            <div class="uk-section uk-section-small uk-background-muted uk-padding">
-                <div class="uk-container  uk-container-large">
-                    <div class="uk-grid">
-                        <div class="uk-width-1-2@s">
-                            <h1>Mack Trucks Survey Project</h1>
-                            <h2 class="uk-margin-large-bottom fs-24">Evolving a Digital Experience (2015 Original vs. Modern Redesign)</h2>
+            <div class="uk-section uk-section-small uk-background-muted">
+                <div class="uk-container uk-container-large">
+                    <div class="">
+                        <div class="uk-margin-auto uk-text-center@s">
+                            <h1 class="fw-600">Evolving a Digital Experience</h1>
+                            <h2 class="uk-margin-large-bottom fs-20">Mack Trucks Survey Project (2015 Original vs. Modern Redesign)</h2>
                         </div>
 
-                        <div class="uk-width-expand">
-                            <div uk-scrollspy="cls:uk-animation-slide-right-medium;target:li;delay: 100">
-                                <ul uk-accordion>
+                        <div class="uk-container uk-container-small uk-background-default uk-border-rounded-large in fs-15">
+                            <div class="uk-padding">
+                                <ul class="" uk-accordion>
                                     <li class="uk-open">
                                         <a class="uk-accordion-title" href>
-                                            <h3 class="uk-margin-remove">2015 Original</h3>
+                                            <h3 class="uk-margin-remove fs-20 fw-600">2015 Original</h3>
                                         </a>
                                         <div class="uk-accordion-content">
-                                            <p>This case study revisits a highly successful project I undertook in November 2015 for Mack Trucks: a multi-channel campaign centered around a survey aimed at generating qualified leads.</p>
+                                            <p>This project revisits a highly successful project I undertook in November 2015 for Mack Trucks: a multi-channel campaign centered around a survey aimed at generating qualified leads.</p>
 
                                             <p>While the original initiative was primarily focused on marketing goals, the project involved significant underlying user experience challenges, including designing an intuitive user flow for survey completion, structuring information effectively, and ensuring a seamless experience across devices via responsive design.</p>
                                         </div>
@@ -129,7 +132,7 @@
 
                                     <li>
                                         <a class="uk-accordion-title" href>
-                                            <h3 class="uk-margin-remove">My Role</h3>
+                                            <h3 class="uk-margin-remove fs-20 fw-600">My Role</h3>
                                         </a>
                                         <div class="uk-accordion-content">
                                             <p>As the lead designer for the survey site, I was responsible for:</p>
@@ -145,7 +148,7 @@
 
                                     <li>
                                         <a class="uk-accordion-title" href>
-                                            <h3 class="uk-margin-remove">Results</h3>
+                                            <h3 class="uk-margin-remove fs-20 fw-600">Results</h3>
                                         </a>
                                         <div class="uk-accordion-content">
                                             <p>The original campaign was highly successful, generating over 1,000 responders (qualified leads), with a significant percentage expressing interest in learning more or test driving a truck.</p>
@@ -155,7 +158,7 @@
 
                                     <li>
                                         <a class="uk-accordion-title" href>
-                                            <h3 class="uk-margin-remove">Modern Redesign</h3>
+                                            <h3 class="uk-margin-remove fs-20 fw-600">Modern Redesign</h3>
                                         </a>
                                         <div class="uk-accordion-content"><p>Presented here as an 'Old vs. New' comparison, this project serves as a case study demonstrating my evolution as a designer and my transition into digital product design. </p>
 
@@ -194,8 +197,8 @@
                     <div class="uk-width-expand@s">
 
                         <div class="uk-section uk-container uk-container-expand" id="login">
-                            <h3 class="uk-margin-small-bottom">Survey Login</h3>
-                            <hr class="uk-margin-remove" />
+                            <h2 class="fs-18 uk-text-uppercase">// Survey Login</h2>
+                            <hr />
                             <div class="uk-grid uk-child-width-1-2@s uk-margin" uk-grid uk-lightbox="animation: fade;slidenav: false; nav: dotnav">
                                 <div>
                                     <a href="img/mack/login-2015.png" data-caption="Original">
@@ -215,7 +218,7 @@
                         </div>
 
                         <div class="uk-section uk-container uk-container-expand" id="info">
-                            <h3 class="uk-margin-small-bottom">Contact Information Form</h3>
+                            <h2 class="fs-18 uk-text-uppercase">// Contact Information Form</h2>
                             <hr class="uk-margin-remove" />
                             <div class="uk-grid uk-child-width-1-2@s uk-margin-medium" uk-grid uk-lightbox="animation: fade;slidenav: false; nav: dotnav">
 
@@ -238,7 +241,7 @@
 
 
                         <div class="uk-section uk-container uk-container-expand" id="questions-1">
-                            <h3 class="uk-margin-small-bottom">Survey Questions</h3>
+                            <h2 class="fs-18 uk-text-uppercase">// Survey Questions</h2>
                             <hr class="uk-margin-remove" />
                             <div class="uk-grid uk-child-width-1-2@s uk-margin-medium" uk-grid uk-lightbox="animation: fade;slidenav: false; nav: dotnav">
 
@@ -257,11 +260,9 @@
                                 </div>
                             </div>
 
-
-
                             <div class="uk-section">
                                 <hr class="uk-divider-icon" />
-                                <p class="uk-text-center">More examples in this project are <span class="uk-text-bold">coming soon</span>!</p>
+                                <div class="uk-text-center in">// More examples  <span class="uk-text-bold">coming soon</span> //</div>
                             </div>
                             
                         </div>
