--- a/index.html
+++ b/index.html
@@ -30,35 +30,38 @@
 
         <!-- Header start -->
         <header>
-            <div class="uk-inline uk-background-muted uk-width-1-1">
+            <div class="uk-background-muted ">
                 <div uk-sticky="show-on-up: true">
                     <nav class="uk-navbar-container uk-navbar-default no-border uk-box-shadow-small" uk-dropnav="align:center">
                         <div class="uk-container uk-container-xlarge" uk-navbar>
                             <div class="uk-navbar-item uk-navbar-left uk-logo uk-link-reset">
-                                <a href="/gd/">Brian French</a>
+                                <a href="/gd/" class="fw-500 warm">
+                                    <img src="img/headshot.jpg" alt="" class="uk-border-circle uk-box-shadow-medium uk-float-left uk-margin-small-right" style="max-height:38px;border:3px solid #fff" /> 
+                                    <span class="margin-small-right uk-width-auto">Brian French</span>&ensp;
+                                </a>
                             </div>
 
                             <div class="uk-navbar-item uk-navbar-center uk-visible@s">
-                                <ul class="uk-subnav uk-flex-center ">
-                                    <li>
-                                        <a href>Current Projects<span uk-drop-parent-icon></span></a>
-                                        <div class="uk-dropdown">
-                                            <ul class="uk-nav uk-dropdown-nav">
-                                                <li><a href="mack.html">Mack Trucks</a></li>
-                                            </ul>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <a href>Past Work<span uk-drop-parent-icon></span></a>
-                                        <div class="uk-dropdown">
-                                            <ul class="uk-nav uk-dropdown-nav uk-list uk-list-large">
-                                                <li class="">Coming Soon</li>
-                                            </ul>
-                                        </div>
-                                    </li>
-                                </ul>
+                                    <ul class="uk-subnav uk-flex-center ">
+                                        <li>
+                                            <a href>Current Projects<span uk-drop-parent-icon></span></a>
+                                            <div class="uk-dropdown">
+                                                <ul class="uk-nav uk-dropdown-nav">
+                                                    <li><a href="mack.html">Mack Trucks</a></li>
+                                                </ul>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <a href>Past Work<span uk-drop-parent-icon></span></a>
+                                            <div class="uk-dropdown">
+                                                <ul class="uk-nav uk-dropdown-nav uk-list uk-list-large">
+                                                    <li class="">Coming Soon</li>
+                                                </ul>
+                                            </div>
+                                        </li>
+                                    </ul>
                             </div>
-                            <div class="uk-navbar-item uk-navbar-right uk-link-reset  uk-visible@s">
+                            <div class="uk-navbar-item uk-navbar-right uk-link-reset uk-visible@s">
                                 <a href="https://www.linkedin.com/in/brianfrenchcreative/" class="" target="_blank">LinkedIn</a>
                             </div>
 
@@ -83,7 +86,12 @@
 
                                                 <li class="uk-nav-header fw-500 uk-margin-large-top">Contact Me</li>
                                                 <li>
-                                                    <a href="https://www.linkedin.com/in/brianfrenchcreative/" class="" target="_blank">LinkedIn <span uk-icon="link-external"></span></a>
+                                                    <a
+                                                       href="https://www.linkedin.com/in/brianfrenchcreative/"
+                                                       class=""
+                                                       target="_blank"
+                                                       >LinkedIn <span uk-icon="link-external"></span
+                                                        ></a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -93,33 +101,30 @@
                         </div>
                     </nav>
                 </div>
+            </div>
+        </header>
 
-                <div class="uk-container uk-container-large uk-margin-large">
-                    <div class="uk-grid uk-flex uk-flex-top" uk-grid>
-                        <div class="">
-                            <h1>
-                                <p class="fs-20 uk-text-uppercase">Hi, I&rsquo;m Brian</p>
-                                <p class="fs-36 fw-400">I&rsquo;m a senior marketing designer focused on craft, growth and strategy</p>
-                                <p class="fs-20">I apply hands-on skill and strategic thinking to solve complex challenges and deliver measurable results.</p>
-                            </h1>
-                        </div>
+        <main class="uk-background-muted">
+            <div class="uk-container uk-container-large uk-section">
+                <div class="uk-grid uk-flex uk-flex-top" uk-grid>
+                    <div class="uk-margin-auto uk-text-center@s">
+                        <h1 class="fs-36 fw-600">Senior marketing designer focused on craft, growth and strategy</h1>
+                        <div class="fs-18 in">I solve complex challenges and deliver measurable business results through hands-on skill and strategic thinking</div>
+                    </div>
 
-                        <div class="uk-width-1-3 uk-width-1-5@s uk-width-1-5@m uk-hidden">
-                            <div class="uk-margin">
-                                <img src="img/headshot.jpg" alt="" class="uk-border-circle uk-box-shadow-large" />
-                            </div>
+                    <div class="uk-width-1-3 uk-width-1-5@s uk-width-1-5@m uk-hidden">
+                        <div class="uk-margin">
+                            <img src="img/headshot.jpg" alt="" class="uk-border-circle uk-box-shadow-large" />
                         </div>
                     </div>
                 </div>
             </div>
-        </header>
-
-        <main>
             <!-- Main Content -->
             <div class="uk-section uk-background-muted" uk-height-viewport="expand:true">
                 <div class="uk-container uk-container-large">
-                    <div class="uk-text-center">
-                        <h2 class="fs-26">Current Projects</h2>
+                    <div class="uk-text-left">
+                        <h2 class="fs-18 fw-500 uk-text-uppercase">// Current Projects</h2>
+                        <hr />
                     </div>
 
                     <div class="uk-background-primary uk-border-rounded-large uk-padding-large uk-light">
@@ -134,7 +139,7 @@
                             <div class="uk-width-expand uk-flex-first@s uk-flex uk-flex-middle">
                                 <div>
                                     <div uk-scrollspy-class="uk-animation-slide-left-small">
-                                        <img src="img/mack/macktrucks-logo.png" class="uk-width-small uk-width-1-5@s" />
+                                        <img src="img/mack/macktrucks-logo.png" class="uk-width-small uk-width-1-2@s uk-width-1-5@m" />
                                     </div>
 
                                     <div class="uk-margin-top" uk-scrollspy-class="uk-animation-slide-left-small">
@@ -142,7 +147,7 @@
                                     </div>
 
                                     <div uk-scrollspy-class="uk-animation-slide-left-small">
-                                        <p>Reimagining a highly successful project I undertook for Mack Trucks with modern design trends, best practices, and a strengthened brand identity.
+                                        <p class="in fs-16">Reimagining a highly successful project I undertook for Mack Trucks with modern design trends, best practices, and a strengthened brand identity.
                                         </p>
                                     </div>
 
@@ -156,8 +161,9 @@
 
             <div class="uk-section uk-background-muted" uk-height-viewport="expand:true">
                 <div class="uk-container uk-container-large">
-                    <div class="uk-text-center">
-                        <h2 class="fs-26">Past Work</h2>
+                    <div class="uk-text-left">
+                        <h2 class="fs-18 fw-500 uk-text-uppercase">// Past Work</h2>
+                        <hr />
                     </div>
 
                     <div class="uk-background-default uk-border-rounded-large uk-padding-large uk-margin">
@@ -170,7 +176,7 @@
                             <div class="uk-width-expand uk-flex-first@s uk-flex uk-flex-middle">
                                 <div>
                                     <div uk-scrollspy-class="uk-animation-slide-left-small">
-                                        <img src="img/5winsights/5W_logo.png" class="uk-width-small uk-width-1-5@s" />
+                                        <img src="img/5winsights/5W_logo.png" class="uk-width-small uk-width-1-2@s uk-width-1-5@m" />
                                     </div>
 
                                     <div class="uk-margin-top" uk-scrollspy-class="uk-animation-slide-left-small">
@@ -179,7 +185,7 @@
                                     </div>
 
                                     <div uk-scrollspy-class="uk-animation-slide-left-small">
-                                        <p>Designs for large-scale booth backdrops, brochures and branded swag.</p>
+                                        <p class="in fs-16">Designs for large-scale booth backdrops, brochures and branded swag.</p>
                                     </div>
 
                                     <a href="5winsights.html" class="uk-button uk-button-default uk-border-pill uk-disabled uk-background-muted-darker uk-light">Coming soon</a>
@@ -193,7 +199,7 @@
                         <div class="uk-grid-small uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-4@m" uk-grid>
                             <div>
                                 <div class="uk-background-default uk-border-rounded-large uk-card uk-card-body uk-text-center">
-                                        <img src="img/aac.png" class="uk-blend-luminosity uk-width-1-2 uk-width-1-1@s" />
+                                    <img src="img/aac.png" class="uk-blend-luminosity uk-width-1-2 uk-width-1-1@s" />
                                     <div><a href="" class="uk-button uk-button-default uk-border-pill uk-disabled uk-background-muted uk-width-1-1">Coming soon</a></div>
                                 </div>
                             </div>
@@ -229,14 +235,15 @@
 
             <div class="uk-section uk-section-default">
                 <div class="uk-container uk-container-large">
-                    <div class="uk-text-center">
-                        <h2 class="fs-26">How coworkers describe me</h2>
+                    <div class="uk-text-left">
+                        <h2 class="fs-18 fw-500 uk-text-uppercase">// How coworkers describe me</h2>
+                        <hr />
                     </div>
 
                     <div class="uk-flex uk-grid">
-                        <div class="uk-grid uk-child-width-1-3@s" uk-grid="masonry: pack">
+                        <div class="uk-grid uk-grid-large uk-child-width-1-2@s uk-child-width-1-3@m fs-16" uk-grid="masonry: pack">
                             <div>
-                                <blockquote class="uk-background-default uk-card-body uk-border-rounded-large fs-16">
+                                <blockquote>
                                     <div>
                                         <p>&ldquo;Brian is truly an outstanding employee in every way including his great attitude, dedication, willingness to do whatever is required to get the job done, his intelligence and his expertise.&rdquo;
                                         </p>
@@ -245,7 +252,7 @@
                             </div>
 
                             <div>
-                                <blockquote class="uk-background-default uk-card-body uk-border-rounded-large fs-16">
+                                <blockquote>
                                     <div>
                                         <p>&ldquo;He is an outstanding Creative Director and is skilled at all aspects of content development and implementation to include strategy development, graphic design, copywriting, production, campaign management, reporting and project management.&rdquo;</p>
                                     </div>
@@ -253,7 +260,7 @@
                             </div>
 
                             <div>
-                                <blockquote class="uk-background-default uk-card-body uk-border-rounded-large fs-16">
+                                <blockquote>
                                     <div>
                                         <p>&ldquo;He is the equivalent of a team of skilled professionals that can conceptualize, design, develop, implement, QC and execute complex campaigns across all channels, including Facebook, Instagram, SMS text, search, display, mobile, email, website and direct mail.&rdquo;</p>
                                     </div>
@@ -261,7 +268,7 @@
                             </div>
 
                             <div>
-                                <blockquote class="uk-background-default uk-card-body uk-border-rounded-large fs-16">
+                                <blockquote>
                                     <div>
                                         <p>&ldquo;Brian is a brilliant designer also skilled with trouble shooting production issues quickly and efficiently. His professional manner is greatly appreciated in the work place and he is always considered the
                                             &lsquo;Go To&rsquo; man.&rdquo;</p>
@@ -270,7 +277,7 @@
                             </div>
 
                             <div>
-                                <blockquote class="uk-background-default uk-card-body uk-border-rounded-large fs-16">
+                                <blockquote>
                                     <div>
                                         <p>&ldquo;Brian&rsquo;s skill at working productively in a high stress, deadline pending situation is unmatched. He is a true ASSET.&rdquo;</p>
                                     </div>
@@ -278,12 +285,13 @@
                             </div>
                         </div>
                     </div>
+                    <hr />
                 </div>
             </div>
         </main>
 
         <footer class="uk-background-muted uk-section-small">
-            <div class="uk-container uk-container-xlarge">
+            <div class="uk-container uk-container-large">
                 <div class="uk-grid">
                     <div class="uk-width-expand">
                         <p class="fs-12">&copy; Brian French 2025. All rights reserved.</p>
