--- a/mack.html
+++ b/mack.html
@@ -108,7 +108,7 @@
 
         <main class="uk-background-muted">
             <!-- Main Content -->
-            <div class="uk-background-secondary">
+            <div class="uk-background-muted">
                 <div class="uk-container uk-container-expand uk-padding-remove uk-overflow-hidden" >
                     <div class="uk-background-bottom-left uk-background-cover uk-panel uk-flex uk-flex-bottom uk-flex-center " style="background-image: url(img/mack/mack-driver-survey.webp);" uk-height-viewport="offset-top: true; offset-bottom: 40;min:400">
                     </div>
